<resources>
    <string name="app_name">Swatch Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Swatch Book</string>
    <string name="nav_header_subtitle">Your Makeup Inventory</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_alpha_sort">Sort by Name</string>
    <string name="action_order_sort">Sort in Order</string>
    <string name="action_type_sort">Sort by Type</string>

    <string name="menu_home">Sorted In Order</string>
    <string name="menu_gallery">Sorted Alphabetically</string>
    <string name="menu_slideshow">Sorted by Type</string>

    <string name="home_second">Home Second</string>

    <string name="collection">My Collection</string>
    <string name="selectItemType">Item Type</string>
    <string name="itemName">Item Name</string>
    <string name="brandName">Brand Name</string>
    <string name="shadeOptional">Shade (optional)</string>
    <string name="dateOpened">Date Opened</string>
    <string name="pickDate">Pick Date</string>
    <string name="dateFormat">%1$d/%2$d/%3$d</string>
    <string name="expiresIn">Expires in: (optional)</string>
    <string name="numMonths"># of months (optional)</string>
    <string name="add">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="numberFormatting">Please enter a numerical digit for Expires in:</string>
    <string name="fillForm">Please Fill Out The Form</string>
    <string name="mainDisplay">%1$s - %2$s</string>
    <string-array name="itemTypeArray">
        <item>Blush</item>
        <item>Bronzer/Contour</item>
        <item>Brow Product</item>
        <item>Concealer</item>
        <item>Eye Liner</item>
        <item>Eyeshadow Palette</item>
        <item>Eyeshadow Single</item>
        <item>Foundation</item>
        <item>Highlighter</item>
        <item>Lip Balm</item>
        <item>Lip Gloss</item>
        <item>Lip Liner</item>
        <item>Lipstick</item>
        <item>Mascara</item>
        <item>Powder</item>
        <item>Primer</item>
        <item>Setting Spray</item>
    </string-array>
</resources>
